// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame 类 正常生成 Frame  不传参 1`] = `
Object {
  "height": 0,
  "rotation": 0,
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`Frame 类 正常生成 Frame  传参 1`] = `
Object {
  "height": 100,
  "rotation": 0,
  "width": 100,
  "x": 5,
  "y": 5,
}
`;

exports[`Frame 类 正常生成 Frame 不传参 1`] = `
Object {
  "height": 0,
  "keepAspectRatio": false,
  "rotation": 0,
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`Frame 类 正常生成 Frame 传参 1`] = `
Object {
  "height": 100,
  "keepAspectRatio": false,
  "rotation": 0,
  "width": 100,
  "x": 5,
  "y": 5,
}
`;
